theme, content, social icons

--- a/src/pages/blog/2019-06-28-forum.md
+++ b/src/pages/blog/2019-06-28-forum.md
@@ -7,6 +7,8 @@ categories:
 layout: "./_layout.astro"
 ---
 
-Presenting the newest part of the overflow.space/Operating Space publishing infrastructure: [a forum](https://forum.operatingspace.net/)!
+Presenting the newest part of the overflow.space/Operating Space publishing infrastructure: a forum!
+
+__Edit: dead link removed.__
 
 Keep an eye on it for new content from me. It'll integrate with the blog in yet-to-be-determined ways. You could also join... it's in beta.
